@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <artifactId>jaxws-tomcat-auth</artifactId>
     <name>jaxws-tomcat-auth</name>
     <packaging>war</packaging>
@@ -15,7 +16,7 @@
         <version>1.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    
     <dependencies>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
@@ -36,20 +37,9 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>
-                        <!-- 解决tomcat关闭警告：WARNING: An illegal reflective access operation has occurred -->
-                        --add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                        --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
+        <finalName>${project.artifactId}</finalName>
 
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
